# bunkfire

./: .env.example  .gitignore  DEPLOY.md  README.md  cli.py  config.py  pyproject.toml  requirements.txt
.streamlit/: config.toml
app/: streamlit_app.py  ui.py
app/pages/: 1_Dashboard.py  2_Upload_Check.py  3_Audit.py
data/: bunkfire.db
db/: connection.py  repository.py  schema.sql
docs/: DESIGN.md
scraper/: auth.py  browser.py  page_scraper.py  prefilter.py  rate_limit.py
scripts/: one_time_login.py  publish.sh
stats/: scoring.py
tests/: test_band_rule.py  test_date_utils.py  test_extractor.py  test_fixture_band_consistency.py  test_repository.py  test_scoring.py
tests/fixtures/: README.md  sample_01_expected.json  sample_02_expected.json  sample_03_expected.json
vision/: band_rule.py  date_utils.py  extractor.py  image_utils.py  prompts.py  schema.py
