[project]
name = "bunkfire"
version = "0.1.0"
description = "เก็บสถิติแพ้ชนะบั้งไฟจากเพจ Facebook BANHAOSTATION และทำนายผ่าน/ไม่ผ่าน"
requires-python = ">=3.10"
dependencies = [
    "anthropic>=0.40.0",
    "playwright>=1.47.0",
    "pydantic>=2.8.0",
    "streamlit>=1.38.0",
    "pandas>=2.2.0",
    "click>=8.1.0",
    "python-dotenv>=1.0.0",
    "pillow>=10.4.0",
    "requests>=2.32.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["config", "cli"]

[tool.setuptools.packages.find]
include = ["db*", "scraper*", "vision*", "stats*", "app*"]
